--- a/css/main.css
+++ b/css/main.css
@@ -667,8 +667,8 @@ ul {
     margin-bottom: 1.496rem;
   }
   h2 {
-    font-size: 3.1097rem;
-    line-height: 3.52rem;
+    font-size: 2.1989rem;
+    line-height: 2.64rem;
   }
   h3 {
     font-size: 2.1989rem;
@@ -716,8 +716,8 @@ ul {
     margin-bottom: 1.632rem;
   }
   h2 {
-    font-size: 4.05rem;
-    line-height: 4.8rem;
+    font-size: 2.05rem;
+    line-height: 2.8rem;
   }
   h3 {
     font-size: 2.7rem;
@@ -782,7 +782,8 @@ pre {
 }
 pre code:not([class]) {
   padding: 1.5em;
-  overflow-x: scroll;
+  overflow-x: auto;
+  display: block;
 }
 code,
 kbd {
